Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp
@@ -966,6 +966,9 @@ void StreamingClient::handleResponseReceived(const ResourceResponse& response)
     priv->size = length >= 0 ? length : 0;
     priv->seekable = length > 0 && g_ascii_strcasecmp("none", response.httpHeaderField("Accept-Ranges").utf8().data());
 
+    // Wait until we unlock to send notifications
+    g_object_freeze_notify(G_OBJECT(src));
+
 #ifdef GST_API_VERSION_1
     GstTagList* tags = gst_tag_list_new_empty();
 #else
@@ -1001,6 +1004,7 @@ void StreamingClient::handleResponseReceived(const ResourceResponse& response)
     }
 
     locker.unlock();
+    g_object_thaw_notify(G_OBJECT(src));
 
     // notify size/duration
     if (length > 0) {
